archives/cloudformation_rds_efs_autoSc_LoadB_SID.yaml
### Generalities
AWSTemplateFormatVersion: 2010-09-09
Description: >-
  AWS CloudFormation VPC Template
### Create ressources
Resources:
  # ##################
  # # Infrastructure #
  # ##################
  #
  #
  ### First step : Create RDS Security Group
  InfraRDSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Infra RDS security group
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          # A MODIFIER
          CidrIp: 0.0.0.0/0
          # A SUPPRIMER
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      VpcId: vpc-8ce01ae4
      Tags:
        - Key: Name
          Value: 'sodbaveka-rds-securityG'
        - Key: Project
          Value: 'P10_OCR'
  #
  #
  ### Next step : Create RDS instance
  DBserver001:
    Type: AWS::RDS::DBInstance
    Properties:
      Engine: MySQL
      MasterUsername: theseus
      MasterUserPassword: theseus1
      DBName: WordPress
      DBInstanceClass: db.t2.micro
      AllocatedStorage: '20'
      MultiAZ: true
      # Not allowed with MultiAZ
      #AvailabilityZone: eu-west-3a
      VPCSecurityGroups: 
        - !Ref InfraRDSSecurityGroup
      Tags:
        - Key: Name
          Value: 'sodbaveka-rds-testInstance'
        - Key: Project
          Value: 'P10_OCR'
  #
  #
  ### Next step : Create EFS Security Group
  InfraEFSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Infra EFS security group
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 2049
          ToPort: 2049
          SourceSecurityGroupId: !Ref InfraEC2SecurityGroup
      VpcId: vpc-8ce01ae4
      Tags:
        - Key: Name
          Value: 'sodbaveka-efs-securityG'
        - Key: Project
          Value: 'P10_OCR'
  #
  #
  ### Next step : Create EFS instance
  EFSFileSystem:
    Type: AWS::EFS::FileSystem
    Properties:
      BackupPolicy:
        Status: ENABLED
      Encrypted: true
      LifecyclePolicies:
        - TransitionToIA: AFTER_60_DAYS
      PerformanceMode: generalPurpose
      Encrypted: true
      ThroughputMode: bursting
      FileSystemTags: 
        - Key: Name
          Value: 'sodbaveka-efs-instance'
        - Key: Project
          Value: 'P10_OCR'
  MountTarget1:
    Type: AWS::EFS::MountTarget
    Properties: 
      FileSystemId: !Ref EFSFileSystem
      IpAddress: 172.31.0.30
      SecurityGroups: 
        - !Ref InfraEFSSecurityGroup
      SubnetId: subnet-130eef7b
  MountTarget2:
    Type: AWS::EFS::MountTarget
    Properties: 
      FileSystemId: !Ref EFSFileSystem
      IpAddress: 172.31.16.30
      SecurityGroups: 
        - !Ref InfraEFSSecurityGroup
      SubnetId: subnet-bcb78fc7
  #
  #
  ### Next step : Create EC2 Security Group
  InfraEC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Infra EC2 security group
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      VpcId: vpc-8ce01ae4
      Tags:
        - Key: Name
          Value: 'sodbaveka-ec2-securityG'
        - Key: Project
          Value: 'P10_OCR'
  #
  #
  ### Next step : Create EC2 instance
  # InstAppli001:
  #   DependsOn: 
  #     - EFSFileSystem
  #     - DBserver001
  #     - WebsiteLoadBalancer
  #   Type : AWS::EC2::Instance
  #   Properties:
  #     InstanceType: t2.micro
  #     ImageId: ami-00c08ad1a6ca8ca7c
  #     KeyName: P10-aws
  #     NetworkInterfaces:
  #       - AssociatePublicIpAddress: true
  #         DeviceIndex: "0"
  #         GroupSet: 
  #           - !Ref InfraEC2SecurityGroup
  #     AvailabilityZone: eu-west-3a
  #     Tags:
  #       - Key: Name
  #         Value: 'sodbaveka-ec2-testInstance'
  #       - Key: Project
  #         Value: 'P10_OCR'
  #     UserData: 
  #       'Fn::Base64': !Sub |
  #         #!/bin/bash
  #         export DB_HOST=${DBserver001.Endpoint.Address}
  #         export STACK_NAME=${AWS::StackName}
  #         export EFS_IP=${MountTarget1.IpAddress}
  #         export EFS_ID=${EFSFileSystem.FileSystemId}
  #         export LB_DNS=${WebsiteLoadBalancer.DNSName}
  #         echo "Stack name : "$STACK_NAME > /home/ec2-user/TEMOIN-001
  #         echo "EFS ip : "$EFS_IP >> /home/ec2-user/TEMOIN-001
  #         echo "EFS id : "$EFS_ID >> /home/ec2-user/TEMOIN-001
  #         echo "Database host : "$DB_HOST >> /home/ec2-user/TEMOIN-001
  #         echo "Load Balancer DNS : "$LB_DNS >> /home/ec2-user/TEMOIN-001
          
  #         echo "OS update : In progress..." >> /var/log/userdata.txt
  #         yum update -y && echo "OS update : Completed." >> /var/log/userdata.txt

  #         echo "Docker installation : In progress..." >> /var/log/userdata.txt
  #         amazon-linux-extras install docker
  #         yum install -y docker
  #         service docker start && echo "Docker installation : Completed." >> /var/log/userdata.txt
  #         usermod -a -G docker ec2-user

  #         echo "Mysql-client installation : In progress..." >> /var/log/userdata.txt
  #         yum install -y mysql && echo "Mysql-client installation : Completed." >> /var/log/userdata.txt

  #         echo "Mounting aws efs : In progress..." >> /var/log/userdata.txt
  #         mkdir /home/ec2-user/efs-mount-point
  #         mount -t nfs -o nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2,noresvport $EFS_ID.efs.eu-west-3.amzonaws.com:/ /home/ec2-user/efs-mount-point
  #         chmod -R 777 /home/ec2-user/efs-mount-point
  #         cd /home/ec2-user/efs-mount-point
  #         echo "test - `date`" > mount_log.txt && echo "Mounting aws efs : Completed." >> /var/log/userdata.txt

  #         echo "Writing in fstab : In progress..." >> /var/log/userdata.txt
  #         export EXIST_MOUNT=`grep -i "$EFS_ID" /etc/fstab`
  #         if [[ -z "$EXIST_MOUNT" ]] ; then
  #           echo "$EFS_ID.efs.eu-west-3.amzonaws.com:/ /home/ec2-user/efs-mount-point nfs defaults,_netdev 0 0" >> /etc/fstab  
  #         fi
  #         echo "Writing in fstab : Completed." >> /var/log/userdata.txt

  #         echo "Running wordpress docker : In progress..." >> /var/log/userdata.txt
  #         docker run -d -p 80:80 --name=myWordpress -e WORDPRESS_DB_HOST=$DB_HOST:3306 -e WORDPRESS_DB_USER=theseus -e WORDPRESS_DB_PASSWORD=theseus1 -e WORDPRESS_DB_NAME=WordPress -v /home/ec2-user/efs-mount-point/:/var/www/html/ wordpress:latest
          
  #         echo "wp-cli, website and S3 plugin installation in docker container : In progress..." >> /var/log/userdata.txt
  #         docker exec -ti --tty=false myWordpress bash <<-EOF 
  #         echo "wp-cli installation : In progress..." >> /var/log/wordpressDocker.txt
  #         curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
  #         php wp-cli.phar --info
  #         chmod +x wp-cli.phar
  #         mv wp-cli.phar /usr/local/bin/wp && echo "wp-cli installation : Completed." >> /var/log/wordpressDocker.txt
  #         if [ -e /var/www/html/installOk.txt ]
  #         then
  #             echo "Wordpress already installed" >> /var/log/wordpressDocker.txt
  #         else
  #             echo "Wordpress installation : In progress..." >> /var/log/wordpressDocker.txt
  #             wp core install --url="$LB_DNS" --title="SodbavekaWebsite" --admin_user=theseus --admin_password=theseus --admin_email=sodbaveka@gmail.com --allow-root
  #             wp plugin install amazon-s3-and-cloudfront --allow-root && wp plugin activate amazon-s3-and-cloudfront --allow-root
  #             cd /var/www/html
  #             sed -i "127idefine( 'AS3CF_SETTINGS', serialize( array('provider' => 'aws','access-key-id' => '***','secret-access-key' => '***',) ) );" wp-config.php
  #             chmod -R 777 /var/www/html/
  #             touch /var/www/html/installOk.txt && echo "Wordpress installation : Completed." >> /var/log/wordpressDocker.txt
  #         fi
  #         EOF
  #         echo "wp-cli, website and S3 plugin installation in docker container : Completed." >> /var/log/userdata.txt
  #
  #
  ### Next step : Create Launch Configuration
  WebsiteLaunchConfig:
    DependsOn: 
      - EFSFileSystem
      - DBserver001
      - S3Bucket
    #  - InstAppli001
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties: 
      AssociatePublicIpAddress: true
      # InstanceId: !Ref InstAppli001
      ImageId: ami-00c08ad1a6ca8ca7c
      InstanceType: t2.micro
      KeyName: P10-aws
      LaunchConfigurationName: "sodbaveka-launchConfiguration"
      SecurityGroups:
        - !Ref InfraEC2SecurityGroup
      UserData: 
        'Fn::Base64': !Sub |
          #!/bin/bash
          export DB_HOST=${DBserver001.Endpoint.Address}
          export STACK_NAME=${AWS::StackName}
          export EFS_IP=${MountTarget1.IpAddress}
          export EFS_ID=${EFSFileSystem.FileSystemId}
          export LB_DNS=${WebsiteLoadBalancer.DNSName}
          export BUCKET=${S3Bucket}
          echo "Stack name : "$STACK_NAME > /home/ec2-user/TEMOIN-001
          echo "EFS ip : "$EFS_IP >> /home/ec2-user/TEMOIN-001
          echo "EFS id : "$EFS_ID >> /home/ec2-user/TEMOIN-001
          echo "Database host : "$DB_HOST >> /home/ec2-user/TEMOIN-001
          echo "Load Balancer DNS : "$LB_DNS >> /home/ec2-user/TEMOIN-001
          echo "S3 bucket name : "$BUCKET >> /home/ec2-user/TEMOIN-001
          
          echo "OS update : In progress..." >> /var/log/userdata.txt
          yum update -y && echo "OS update : Completed." >> /var/log/userdata.txt

          echo "Docker installation : In progress..." >> /var/log/userdata.txt
          amazon-linux-extras install docker
          yum install -y docker
          service docker start && echo "Docker installation : Completed." >> /var/log/userdata.txt
          usermod -a -G docker ec2-user

          echo "Mysql-client installation : In progress..." >> /var/log/userdata.txt
          yum install -y mysql && echo "Mysql-client installation : Completed." >> /var/log/userdata.txt
          echo "stress package installation : In progress..." >> /var/log/userdata.txt
          amazon-linux-extras install epel -y
          yum install -y stress && echo "stress package installation : Completed." >> /var/log/userdata.txt

          echo "Mounting aws efs : In progress..." >> /var/log/userdata.txt
          mkdir /home/ec2-user/efs-mount-point
          mount -t nfs -o nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2,noresvport $EFS_ID.efs.eu-west-3.amzonaws.com:/ /home/ec2-user/efs-mount-point
          chmod -R 777 /home/ec2-user/efs-mount-point
          cd /home/ec2-user/efs-mount-point
          echo "test - `date`" > mount_log.txt && echo "Mounting aws efs : Completed." >> /var/log/userdata.txt

          echo "Writing in fstab : In progress..." >> /var/log/userdata.txt
          export EXIST_MOUNT=`grep -i "$EFS_ID" /etc/fstab`
          if [[ -z "$EXIST_MOUNT" ]] ; then
            echo "$EFS_ID.efs.eu-west-3.amzonaws.com:/ /home/ec2-user/efs-mount-point nfs defaults,_netdev 0 0" >> /etc/fstab  
          fi
          echo "Writing in fstab : Completed." >> /var/log/userdata.txt

          echo "Running wordpress docker : In progress..." >> /var/log/userdata.txt
          docker run -d -p 80:80 --name=myWordpress -e WORDPRESS_DB_HOST=$DB_HOST:3306 -e WORDPRESS_DB_USER=theseus -e WORDPRESS_DB_PASSWORD=theseus1 -e WORDPRESS_DB_NAME=WordPress -v /home/ec2-user/efs-mount-point/:/var/www/html/ wordpress:latest
          
          echo "wp-cli, website and S3 plugin installation in docker container : In progress..." >> /var/log/userdata.txt
          docker exec -ti --tty=false myWordpress bash <<-EOF 
          echo "wp-cli installation : In progress..." >> /var/log/wordpressDocker.txt
          curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
          php wp-cli.phar --info
          chmod +x wp-cli.phar
          mv wp-cli.phar /usr/local/bin/wp && echo "wp-cli installation : Completed." >> /var/log/wordpressDocker.txt
          if [ -e /var/www/html/installOk.txt ]
          then
              echo "Wordpress already installed" >> /var/log/wordpressDocker.txt
          else
              echo "Wordpress installation : In progress..." >> /var/log/wordpressDocker.txt
              wp core install --url="$LB_DNS" --title="SodbavekaWebsite" --admin_user=theseus --admin_password=theseus --admin_email=sodbaveka@gmail.com --allow-root
              wp plugin install amazon-s3-and-cloudfront --allow-root && wp plugin activate amazon-s3-and-cloudfront --allow-root
              cd /var/www/html
              sed -i "127idefine( 'AS3CF_SETTINGS', serialize( array('provider' => 'aws','access-key-id' => '***','secret-access-key' => '***', 'use-server-roles' => false, 'bucket' => 'sodbaveka-website-public-bucket', 'region' => 'eu-west-3', 'copy-to-s3' => true, 'enable-object-prefix' => true, 'object-prefix' => 'wp-content/uploads/', 'use-yearmonth-folders' => true, 'object-versioning' => true, 'serve-from-s3' => true, 'remove-local-file' => true,) ) );" wp-config.php
              chmod -R 777 /var/www/html/
              touch /var/www/html/installOk.txt && echo "Wordpress installation : Completed." >> /var/log/wordpressDocker.txt
          fi
          EOF
          echo "wp-cli, website and S3 plugin installation in docker container : Completed." >> /var/log/userdata.txt
  #
  #        
  ### Next step : Create Scaling Group
  WebsiteScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AutoScalingGroupName: "sodbaveka-autoScalingGroup"
      LaunchConfigurationName: !Ref WebsiteLaunchConfig
      AvailabilityZones:
        - Fn::Select:
          - 0
          - Fn::GetAZs: !Ref AWS::Region
        - Fn::Select:
          - 1
          - Fn::GetAZs: !Ref AWS::Region
      VPCZoneIdentifier: 
        - subnet-130eef7b
        - subnet-bcb78fc7
      DesiredCapacity: 2
      MaxSize: 4
      MinSize: 1
      TargetGroupARNs: 
        - !Ref WebsiteTargetGroup
  #
  #
  ### Next step : Create Target Group
  WebsiteTargetGroup: 
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties: 
      Port: 80
      Protocol: HTTP
      TargetGroupAttributes:
        - Key: "stickiness.enabled"
          Value: true
        - Key: "stickiness.type"
          Value: "lb_cookie"
      VpcId: vpc-8ce01ae4
  #
  #
  ### Next step : Create Load Balancer
  WebsiteLoadBalancer: 
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Type: application
      Scheme: internet-facing
      SecurityGroups:
        - !Ref WebsiteLoadBalancerSecurityGroup
      Subnets:  
        - subnet-130eef7b
        - subnet-bcb78fc7
  WebsiteLoadBalancerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Website EC2 security group 
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
      SecurityGroupIngress: 
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      VpcId: vpc-8ce01ae4
      Tags:
        - Key: Name
          Value: 'sodbaveka-loadB-securityG'
        - Key: Project
          Value: 'P10_OCR'
  WebsiteLoadBlancerListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties: 
      LoadBalancerArn: !Ref WebsiteLoadBalancer
      Port: 80
      Protocol: HTTP
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref WebsiteTargetGroup
  #
  #
  ### Next step : Create S3 public bucket
  S3Bucket:
    Type: 'AWS::S3::Bucket'
    DeletionPolicy: Retain
    Properties:
      BucketName: sodbaveka-website-public-bucket  
      AccessControl: PublicReadWrite
      Tags:
        - Key: Name
          Value: 'sodbaveka-website-public-bucket'
        - Key: Project
          Value: 'P10_OCR'
  #
  #
